--- a/templates/domain_enter.html
+++ b/templates/domain_enter.html
@@ -81,7 +81,7 @@ Enter domains to scrape:
 
 <form id='answerform' method='post' action='/' > <!-- action must match your next URL -->
    <p>
-   domain 1:<input type='text' style="width: 450px" style="height:50px" name='domain_1', placeholder='http://www.peoplesmomentum.com/' ><br />
+   domain 1:<input type='text' style="width: 450px" name='domain_1', placeholder='http://www.peoplesmomentum.com/' ><br />
    domain 2:<input type='text' style="width: 450px" name='domain_2' ><br />
    domain 3:<input type='text' style="width: 450px" name='domain_3' ><br />
    domain 4:<input type='text' style="width: 450px" name='domain_4' ><br />
