--- a/templates/done_screen_no_data.html
+++ b/templates/done_screen_no_data.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Complete</title>
+<title>Failed</title>
 </head>
 
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
@@ -15,15 +15,13 @@
 
   </style>
     <body>
-  <h1>Complete</h1>
+  <h1>Failed</h1>
 
   <div class=metanav>
 <p>
 <p style="width:765px; text-align:justify; font-size:0.9em;"> {{complete_msg}}</p>
 </p>
 
-
-		<a href="/test.csv">Download</a>
 
 
 
