--- a/templates/domain_enter.html
+++ b/templates/domain_enter.html
@@ -1,3 +1,5 @@
+<!-- Choose domains for scraping -->
+
 <!doctype html>
 <html>
 <head>
@@ -73,7 +75,9 @@ function showDiv() {
   </style>
     <body>
   <h1>Social media web scraper</h1>
+  <!-- Create div to display when loading -->
   <div id="loadingDiv"  style="display:none;" class="loader"></div>
+
   <div class=metanav>
 <p>
 Enter domains to scrape:
@@ -81,11 +85,11 @@ Enter domains to scrape:
 
 <form id='answerform' method='post' action='/' > <!-- action must match your next URL -->
    <p>
-   domain 1:<input type='text' style="width: 450px" name='domain_1', placeholder='http://www.peoplesmomentum.com/' ><br />
-   domain 2:<input type='text' style="width: 450px" name='domain_2' ><br />
-   domain 3:<input type='text' style="width: 450px" name='domain_3' ><br />
-   domain 4:<input type='text' style="width: 450px" name='domain_4' ><br />
-   domain 5:<input type='text' style="width: 450px" name='domain_5' ><br />
+   1: <input type='text' style="width: 450px" name='domain_1', placeholder='http://www.peoplesmomentum.com/' ><br />
+   2: <input type='text' style="width: 450px" name='domain_2' ><br />
+   3: <input type='text' style="width: 450px" name='domain_3' ><br />
+   4: <input type='text' style="width: 450px" name='domain_4' ><br />
+   5: <input type='text' style="width: 450px" name='domain_5' ><br />
    <p>
 
    <p>
