--- a/templates/domain_enter.html
+++ b/templates/domain_enter.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 
-<title>Social media web scraper</title>
+<title>Social media scraper</title>
 </head>
 
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
@@ -74,7 +74,7 @@ function showDiv() {
 }
   </style>
     <body>
-  <h1>Social media web scraper</h1>
+  <h1>Social media scraper</h1>
   <!-- Create div to display when loading -->
   <div id="loadingDiv"  style="display:none;" class="loader"></div>
 
