--- a/templates/domain_enter.html
+++ b/templates/domain_enter.html
@@ -13,6 +13,7 @@
 <script language = 'javascript'>
 function showDiv() {
    document.getElementById('loadingDiv').style.display = "block";
+   document.getElementById('loadingText').style.display = "block";
 }
 
 </script>
@@ -65,18 +66,29 @@ function showDiv() {
 
 .loader {
 	position: fixed;
-	left: 0px;
+	left:0px;
 	top: 0px;
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
 	background: url('static/Spin.gif') 50% 50% no-repeat rgb(249,249,249);
 }
+
+.loaderText {
+	position: fixed;
+	left: 10px;
+	top: 10px;
+	width: 50%;
+	height: 50%;
+	z-index: 9999;
+}
+
   </style>
     <body>
   <h1>Social media scraper</h1>
   <!-- Create div to display when loading -->
   <div id="loadingDiv"  style="display:none;" class="loader"></div>
+  <div id="loadingText"  style="display:none;" class="loaderText"></div>
 
   <div class=metanav>
 <p>
@@ -94,7 +106,6 @@ Enter domains to scrape:
 
    <p>
      <button class="button" style="vertical-align:middle" onclick="showDiv()" ><span>go </span></button>
-   <!-- <input type='submit' value='load map' /> <!-the 'value' is the word that will appear on your button.-->
    </p>
 </form>
 
